# untitled

./: Cargo.toml  index.html  justfile
assets/: Sprite-0001.aseprite  pond.aseprite
assets/tilesets/: tileset.ron
assets/tilesets/tiles/: 0.ron  1.ron  2.ron  3.ron  4.ron  5.ron
src/: camera.rs  canvas_resizer.rs  main.rs  mouse.rs  pathfinding.rs  player.rs  sprite.rs  tile_editor.rs  tiles.rs  utils.rs
